--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,7 @@ site:
   key: :dc
   subdomain: "dc"
   domain_name: "www.DCHealthLink.com"
+  short_name: "DC Health Link"
   site_title: "Maine CoverME"
   home_url: "https://www.DCHealthLink.com/"
   home_business_url: "https://www.accesshealthct.com/AHCT/LandingPageCTHIX"
@@ -10,7 +11,7 @@ site:
   # faqs_url: "https://www.dchealthlink.com/Frequently-Asked-Questions"
   # business_resource_center_url: "https://dchealthlink.com/smallbusiness/"
   # nondiscrimination_notice_url: "https://www.dchealthlink.com/nondiscrimination"
-  # policies_url: "https://dchealthlink.com/"
+  policies_url: "https://dchealthlink.com/"
   main_web_address_url: "https://www.dchealthlink.com/"
   invoice_bill_url: "https://www.e-billexpress.com/ebpp/DCHEALTHPAY/"
   payment_pdf_url: "pdf/employers_paying_your_premiums_online.pdf"
@@ -23,10 +24,10 @@ site:
   byline: "Maine's Official Health Insurance Marketplace"
   long_name: "Maine CoverME"
   header_message: "Welcome to the District's Health Insurance Marketplace"
-  logo_file_name: "logo_me.svg"
+  logo_file_name: "dc_logo.png"
   make_their_premium_payments_online: "https://www.e-billexpress.com/ebpp/DCHEALTHPAY/"
   tab_icon: 'favicon_me.ico'
-  mailer_logo_file_name: "coverme.png"
+  mailer_logo_file_name: "dc_logo.png"
   employer_application_deadline_link: "https://dchealthlink.com/smallbusiness/employer-coverage-deadlines"
   s3_prefix: "dchbx"
   broker_quoting_enabled: false
@@ -90,6 +91,7 @@ contact_center:
   zip_code: "04330"
   small_business_email: "smallbusiness@coverme.gov"
   non_discrimination_email: "info@coverme.gov"
+  contact_center_number_for_display: "(855) 532-5465"
 
   appeals: "info@coverme.gov"
 
@@ -148,8 +150,8 @@ invoices:
   minimum_invoice_display_year: 2015
 
 aca:
-  state_key : "me"
-  state_name: "Maine"
+  state_key : "dc"
+  state_name: "District of Columbia"
   state_abbreviation: "DC"
   market_kinds: ["shop", "individual", "fehb"]
 
@@ -366,7 +368,7 @@ notices:
   shop:
     store_paper_notice: false
     attachments:
-      envelope_without_address: "taglines.pdf"
+      envelope_without_address: "dc_taglines.pdf"
       non_discrimination_attachment: "shop_non_discrimination_attachment.pdf"
       employee_appeal_rights: "employee_appeal_rights.pdf"
     partials:
@@ -379,7 +381,7 @@ notices:
     store_paper_notice: true
     attachments:
       blank_page_attachment: "blank.pdf"
-      envelope_without_address: "taglines.pdf"
+      envelope_without_address: "dc_taglines.pdf"
       non_discrimination_attachment: "ivl_non_discrimination.pdf"
       voter_application: "voter_application.pdf"
     partials:
