--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -86,6 +86,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           install: true
+          version: v0.9.1
 
       - name: Cache Docker layers
         uses: actions/cache@v2
