modify tax_forms namespace in rr

--- a/system/config/templates/features/tax_notices.yml
+++ b/system/config/templates/features/tax_notices.yml
@@ -1,7 +1,9 @@
 ---
 registry:
   - namespace:
-      - :features
+      - :polypress
+      - :aca_individual_market
+      - :tax_forms
     features:
       - key: :modify_carrier_legal_names
         is_enabled: true
