--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -191,11 +191,13 @@ jobs:
             --dbpath="${GITHUB_WORKSPACE}/cache/db/" \
             --cachepath="${GITHUB_WORKSPACE}/cache/scanner-cache/"
 
-      - name: Upload anchore scan SARIF report and remove cache
+      - name: Upload anchore scan SARIF report
         if: github.event_name != 'pull_request'
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
+
+      - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
