--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -99,6 +99,9 @@ Style/ExpandPathArguments:
 Style/HashSyntax:
   Enabled: false
 
+Style/NumericLiterals:
+  Enabled: false
+
 Style/NumericPredicate:
   Enabled: false
 
